--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
 	<title>Agency</title>
+
+<!-- 	meta tags -->
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE-edge">
 	<meta name="viewport" content="width=500, initial-scale=1">
+
+<!-- 	favicon -->
+	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"">
+
 
 </head>
 <body>
