--- a/index.html
+++ b/index.html
@@ -4,19 +4,27 @@
 
 	<title>Agency</title>
 
-<!-- 	meta tags -->
+	<!-- meta tags -->
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE-edge">
 	<meta name="viewport" content="width=500, initial-scale=1">
 
-<!-- 	favicon -->
+	<!-- favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"">
+
+	<!-- style CSS -->
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 
 
 </head>
 <body>
 
 	<h1>Welcome to our agency!</h1>
+
+	<!-- JavaScript-->
+	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/custom.js"></script>
 
 </body>
 </html>
