--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 	<!-- favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"">
 
+	<!-- google fonts -->
+
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i" rel="stylesheet">
+
+	<!-- fontawesome -->
+
+	<link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css">
+
 	<!-- style CSS -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -21,6 +29,7 @@
 <body>
 
 	<h1>Welcome to our agency!</h1>
+	<i class="fa fa-laptop"></i>
 
 	<!-- JavaScript-->
 	<script type="text/javascript" src="js/jquery.js"></script>
