--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
 	<link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css">
 
+	<!-- bootstrap CSS -->
+
+	<link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap.min.css">
+
 	<!-- style CSS -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -31,8 +35,16 @@
 	<h1>Welcome to our agency!</h1>
 	<i class="fa fa-laptop"></i>
 
-	<!-- JavaScript-->
+	<!-- jQuery-->
+
 	<script type="text/javascript" src="js/jquery.js"></script>
+
+	<!-- bootstrap JS -->
+
+	<script type="text/javascript" src="js/bootstrap/bootstrap.min.js"></script>
+
+	<!-- custom JS -->
+	
 	<script type="text/javascript" src="js/custom.js"></script>
 
 </body>
