--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
 	<section id="home">
 
-		<div id="home-cover">
+		<!-- Start Home Cover -->
+
+		<div id="home-cover" class="bg-parallax">
 		
 			<div id="home-content-box">
 
@@ -63,10 +65,25 @@
 
 		</div>
 
+		<!-- End Home Cover -->
+
 	</section>
 
 	<!-- End Home -->
 
+	<!-- Temporary Space -->
+
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
 
 	<!-- jQuery-->
 	<script type="text/javascript" src="js/jquery.js"></script>
