--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 	<!-- bootstrap CSS -->
 	<link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap.min.css">
 
+	<!-- animate CSS -->
+	<link rel="stylesheet" type="text/css" href="css/animate/animate.css">
+
 	<!-- style CSS -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -33,7 +36,7 @@
 
 		<!-- Start Home Cover -->
 
-		<div id="home-cover" class="bg-parallax">
+		<div id="home-cover" class="bg-parallax animated fadeIn">
 		
 			<div id="home-content-box">
 
@@ -41,7 +44,7 @@
 					
 					<!-- Start Home Heading  -->
 
-					<div id="home-heading">
+					<div id="home-heading" class="animated zoomIn">
 						
 						<h3>Watch Out <br> The Modern Responsive Website</h3>
 
@@ -51,7 +54,7 @@
 
 					<!-- Start Home Button -->
 
-					<div id="home-btn">
+					<div id="home-btn" class="animated zoomIn">
 
 						<a class="btn btn-lg btn-general btn-white" href="#work" role="button" title="View Our Work">View Our Work</a> 
 
