--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 			<!-- Start Services Heading  -->
 
-			<div class="content-title">
+			<div class="content-title wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
 
 				<h3>Services</h3>
 
@@ -96,7 +96,7 @@
 
 			<div class="container">
 
-				<div class="row">
+				<div class="row wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
 
 					<!-- Start Service Item 1 -->
 
@@ -291,11 +291,14 @@
 	<!-- End Services -->
 
 
-	<!-- jQuery-->
+	<!-- jQuery -->
 	<script type="text/javascript" src="js/jquery.js"></script>
 
 	<!-- bootstrap JS -->
 	<script type="text/javascript" src="js/bootstrap/bootstrap.min.js"></script>
+
+	<!-- WOW JS -->
+	<script src="js/wow/wow.min.js"></script>
 
 	<!-- custom JS -->
 	<script type="text/javascript" src="js/custom.js"></script>
