about CSS left section

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 			<!-- Start Services Heading  -->
 
-			<div class="content-title wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+			<div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
 
 				<h3> Services </h3>
 
@@ -96,7 +96,7 @@
 
 			<div class="container">
 
-				<div class="row wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+				<div class="row wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
 
 					<!-- Start Service Item 1 -->
 
@@ -317,7 +317,7 @@
 
 							<div id="about-content-box-inner">
 
-								<div class="content-title wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+								<div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
 
 									<h3> About Us </h3>
 
@@ -325,7 +325,7 @@
 
 								</div>
 
-								<div id="about-description">
+								<div id="about-description" class="wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
 
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 									tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -334,9 +334,9 @@
 
 								</div>
 
-								<div id="about-btn">
+								<div id="about-btn" class="wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
 									
-									<a class="btn btn-lg btn-general" href="#work" role="button"> Our Work </a>
+									<a class="btn btn-lg btn-general btn-blue" href="#work" role="button"> Our Work </a>
 
 								</div>
 								
