about CSS left section

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
 		<!-- Start Right Side (Img) -->
 
-		<div id="about-bg-diagonal">
+		<div id="about-bg-diagonal" class="bg-parallax">
 			
 
 		</div>
