--- a/index.html
+++ b/index.html
@@ -379,9 +379,9 @@
 
          <!-- End Work Heading -->
 
-         <div class="container">
+         <div class="container-fluid">
 
-            <div class="row wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+            <div class="row no-gutters wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
 
                 <!-- Start Work Item 1 -->
 
