--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <!-- Animate CSS -->
     <link rel="stylesheet" type="text/css" href="css/animate/animate.css">
 
+    <!-- Magnific Popup CSS -->
+    <link rel="stylesheet" href="css/magnific-popup/magnific-popup.css">
+
     <!-- Custom Style CSS -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -559,6 +562,9 @@
 
     <!-- WOW JS -->
     <script src="js/wow/wow.min.js"></script>
+
+    <!-- Magnific Popup JS -->
+    <script src="js/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- custom JS -->
     <script type="text/javascript" src="js/custom.js"></script>
