testimonials owl carousel

--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@
 
                         <div class="col-md-12">
                             
-                            <div id="customers-testimonials" class="text-center">
+                            <div id="customers-testimonials" class="text-center owl-carousel owl-theme">
 
                                 <!-- Start Testimonial 1 -->
 
