--- a/index.html
+++ b/index.html
@@ -872,8 +872,6 @@
 
     <!-- Start Pricing -->
 
-    <!-- Start Testimonials -->
-
     <section id="pricing">
 
             <div class="content-box">
@@ -1110,6 +1108,88 @@
     </section>
 
     <!-- End Stats -->
+
+    <!-- Start Clients -->
+
+    <section id="clients">
+
+        <div class="content-box">
+
+            <!-- Start Clients Heading  -->
+
+            <div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+
+                <h3> Clients </h3>
+
+                <div class="content-title-underline"></div>
+
+            </div>
+
+            <!-- End Clients Heading -->
+
+            <div class="container">
+
+                <div class="row wow animated bounceInLeft" data-wow-duration="1s" data-wow-delay=".5s">
+
+                    <div class="col-md-12">
+
+                        <div id="clients-wrapper">
+
+                            <div class="client">
+
+                                <img src="img/client/logos/logo-1.jpg" class="img-responsive" alt="client">
+
+                            </div>
+
+                            <div class="client">
+
+                                <img src="img/client/logos/logo-2.jpg" class="img-responsive" alt="client">
+
+                            </div>
+
+                            <div class="client">
+
+                                <img src="img/client/logos/logo-3.jpg" class="img-responsive" alt="client">
+
+                            </div>
+
+                            <div class="client">
+
+                                <img src="img/client/logos/logo-4.jpg" class="img-responsive" alt="client">
+
+                            </div>
+
+                            <div class="client">
+
+                                <img src="img/client/logos/logo-5.jpg" class="img-responsive" alt="client">
+
+                            </div>
+
+                            <div class="client">
+
+                                <img src="img/client/logos/logo-6.jpg" class="img-responsive" alt="client">
+
+                            </div>
+
+                            <div class="client">
+
+                                <img src="img/client/logos/logo-7.jpg" class="img-responsive" alt="client">
+
+                            </div>
+
+                        </div>     
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- End Clients -->
 
 
 
