--- a/index.html
+++ b/index.html
@@ -1133,7 +1133,7 @@
 
                     <div class="col-md-12">
 
-                        <div id="clients-wrapper">
+                        <div id="clients-list" class="owl-carousel owl-theme">
 
                             <div class="client">
 
