--- a/index.html
+++ b/index.html
@@ -1329,11 +1329,11 @@
                                 
                                 <li><a href="#home">Home</a>/</li>
                                 <li><a href="#services">Services</a>/</li>
-                                <li><a href="work">Work</a>/</li>
-                                <li><a href="team">Team</a>/</li>
-                                <li><a href="testimonials">Testimonials</a>/</li>
-                                <li><a href="pricing">Pricing</a>/</li>
-                                <li><a href="stats">Stats</a>/</li>
+                                <li><a href="#work">Work</a>/</li>
+                                <li><a href="#team">Team</a>/</li>
+                                <li><a href="#testimonials">Testimonials</a>/</li>
+                                <li><a href="#pricing">Pricing</a>/</li>
+                                <li><a href="#stats">Stats</a>/</li>
 
                             </ul>
                             
