--- a/index.html
+++ b/index.html
@@ -37,6 +37,49 @@
 </head>
 <body>
 
+    <header>
+        
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+
+            <div class="container-fluid">
+
+                <div class="vesco-nav-wrapper">
+
+                    <div class="navbar-header">
+
+                        <a clas="navbar-brand" href="#home">
+                            <img src="img/logo.png"> <!-- Logo Img -->
+                        </a>
+
+                    </div>
+
+                    <div id="vesco-menu">
+
+                        <ul class="nav navbar-nav">
+                            
+                            <li><a href="#home">Home</a></li>
+                            <li><a href="#services">Services</a></li>
+                            <li><a href="#about">About</a></li>
+                            <li><a href="#work">Work</a></li>
+                            <li><a href="#team">Team</a></li>
+                            <li><a href="#testimonials">Testimonials</a></li>
+                            <li><a href="#pricing">Pricing</a></li>
+                            <li><a href="#stats">Stats</a></li>
+                            <li><a href="#clients">Clients</a></li>
+                            <li><a href="#contact">Contact</a></li>
+
+                        </ul>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </nav>
+
+    </header>
+
     <!-- Start Home -->
 
     <section id="home">
