--- a/index.html
+++ b/index.html
@@ -47,13 +47,20 @@
 
                     <div class="navbar-header">
 
+                        <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#vesco-menu">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+
                         <a clas="navbar-brand" href="#home">
                             <img src="img/logo.png"> <!-- Logo Img -->
                         </a>
 
                     </div>
 
-                    <div id="vesco-menu">
+                    <div id="vesco-menu" class="collapse navbar-collpase">
 
                         <ul class="nav navbar-nav">
                             
