--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <header>
         
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <nav class="navbar vesco-top-nav navbar-fixed-top" role="navigation">
 
             <div class="container-fluid">
 
@@ -54,13 +54,13 @@
                             <span class="icon-bar"></span>
                         </button>
 
-                        <a clas="navbar-brand" href="#home">
+                        <a class="navbar-brand" href="#home">
                             <img src="img/logo.png"> <!-- Logo Img -->
                         </a>
 
                     </div>
 
-                    <div id="vesco-menu" class="collapse navbar-collpase">
+                    <div id="vesco-menu" class="collapse navbar-collapse">
 
                         <ul class="nav navbar-nav">
                             
