spy scroll navbar

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
-<body>
+<body data-spy="scroll" data-target=".vesco-top-nav" data-offset="65">
 
     <header>
         
