effect added: navbar background appears when scrolling

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
-<body data-spy="scroll" data-target=".vesco-top-nav" data-offset="65">
+<body data-spy="scroll" data-target=".navbar-fixed-top" data-offset="65">
 
     <header>
         
-        <nav class="navbar vesco-top-nav navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-fixed-top" role="navigation">
 
             <div class="container-fluid">
 
