back to top button

--- a/index.html
+++ b/index.html
@@ -1399,6 +1399,11 @@
 
         <!-- End Footer Copyright Menu -->
 
+        <!-- Back to Top Button -->
+
+        <a href="#home" id="back-to-top" class="btn btn-sm btn-blue btn-back-to-top smooth-scroll" title="home" role="button"><i class="fa fa-angle-up"></i></a>
+
+
     </footer>
 
     <!-- End Footer -->
