medium devices responsive

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <!-- Custom Style CSS -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" type="text/css" href="css/responsive.css">
+
 </head>
 <body data-spy="scroll" data-target=".navbar-fixed-top" data-offset="65">
 
