--- a/index.html
+++ b/index.html
@@ -1374,7 +1374,7 @@
                         
                     </div>
 
-                     <div class="col-md-6 hidden-sm">
+                     <div class="hidden-xs hidden-sm col-md-6">
 
                         <div id="footer-menu">
 
