--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 
     <!-- Meta Tags -->
     <meta charset="UTF-8">
+
+    <meta name="description" content="Responsive Website with html5, css3, jQuery & bootstrap framework">
+    <meta name="keywords" content="HTML5, CSS3, jQuery, Bootstrap, Web Design, Web Development, Responsive Website, Modern Website">
+
+
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=500, initial-scale=1">
 
