Downsized background image.

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         <!-- Start Home Cover -->
 
         <div id="home-cover" class="bg-parallax animated fadeIn">
+            <img style="display: none;" src="./img/bg-home-2.jpg" alt="">
         
             <div id="home-content-box">
 
